--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "ts-ide-overrides",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./dist",
   "repository": "https://github.com/ashsearle/ts-ide-overrides.git",
   "author": "Ash Searle <ash@hexmen.com>",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc"
   },
